--- a/sass/templates/_bellagio.scss
+++ b/sass/templates/_bellagio.scss
@@ -126,7 +126,7 @@ header {
   margin: 0 0 36px;
   min-height: 827px;
   position: relative;
-
+ 
   .search-title {
     height: 60px;
 
@@ -159,10 +159,54 @@ header {
       cursor: pointer;
       color: #2c2c2c;
       font-weight: 500;
+
       i {
         margin-left: 12px;
         font-size: 20px;
         color: $primary-color;
+      }
+    }
+  }
+
+  .results_table {
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+    position: relative;
+    
+    .sort {
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: normal;
+      color: #2c2c2c;
+      text-align: center;
+      border-left: 1px solid #dfdfdf;
+      margin: 12px 0;
+      height: 32px;
+      line-height: 20px;
+      cursor: pointer;
+      
+      span {
+        font-weight: 500;
+        letter-spacing: 1px;
+        line-height: 1;
+        display: inline-block;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .attributes {
+        color: #818181;
+        line-height: 1;
+      }
+    }
+
+    thead{
+      box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.10);
+      th:first-child .sort{
+        border: 0 none;
       }
     }
   }
