--- a/sass/templates/_bellagio.scss
+++ b/sass/templates/_bellagio.scss
@@ -126,7 +126,7 @@ header {
   margin: 0 0 36px;
   min-height: 827px;
   position: relative;
- 
+
   .search-title {
     height: 60px;
 
@@ -173,7 +173,7 @@ header {
     border-spacing: 0;
     border-collapse: collapse;
     position: relative;
-    
+
     .sort {
       text-transform: uppercase;
       font-size: 12px;
@@ -185,7 +185,7 @@ header {
       height: 32px;
       line-height: 20px;
       cursor: pointer;
-      
+
       span {
         font-weight: 500;
         letter-spacing: 1px;
@@ -203,10 +203,33 @@ header {
       }
     }
 
-    thead{
+    thead {
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.10);
-      th:first-child .sort{
+
+      th:first-child .sort {
         border: 0 none;
+      }
+    }
+
+    tbody {
+      cursor: default;
+      transition: background-color .25s;
+
+      tr {
+        &:nth-child(2n){
+          background: $grey-color;
+        }
+        td {
+          text-align: center;
+          height: 40px;
+          width: 11.1111%;
+          font-family: 'proxima_novaregular', Helvetica, Arial, sans-serif;
+          font-size: 14px;
+          vertical-align: middle;
+          color: #3a3a3a;
+          -webkit-transition: color .25s;
+          transition: color .25s;
+        }
       }
     }
   }
