--- a/sass/templates/_bellagio.scss
+++ b/sass/templates/_bellagio.scss
@@ -123,23 +123,42 @@ header {
   background: #fff;
   border: 1px solid #e7e7e7;
   line-height: 1;
-  margin: 0 0 36px;
   min-height: 827px;
   position: relative;
-  padding-bottom: 40px;
+
   .search-title {
     height: 60px;
 
     h1 {
       font-weight: bold;
-      font-size: 18px;
+      font-size: 11px;
       margin: 0;
       width: 90%;
       height: inherit;
       line-height: 60px;
-      padding: 0 0 0 24px;
+      padding: 0 0 0 10px;
       color: #2c2c2c;
       border-bottom: 1px solid #dfdfdf;
+
+      @include breakpoint($small) {
+        font-size: 14px;
+      }
+
+      @include breakpoint($medium) {
+        font-size: 15px;
+        padding: 0 0 0 20px;
+
+      }
+
+      @include breakpoint($large) {
+        font-size: 17px;
+      }
+
+      @include breakpoint($x-large) {
+        font-size: 18px;
+        padding: 0 0 0 24px;
+
+      }
 
       span {
         font-weight: 400;
@@ -155,7 +174,7 @@ header {
       letter-spacing: 1px;
       height: 60px;
       line-height: 60px;
-      font-size: 16px;
+      font-size: 11px;
       cursor: pointer;
       color: #2c2c2c;
       font-weight: 500;
@@ -164,6 +183,31 @@ header {
         margin-left: 12px;
         font-size: 20px;
         color: $primary-color;
+      }
+
+      @include breakpoint($small) {
+        font-size: 13px;
+      }
+
+      @include breakpoint($medium) {
+        font-size: 14px;
+        padding: 0 0 0 20px;
+
+      }
+
+      @include breakpoint($large) {
+        font-size: 15px;
+      }
+
+      @include breakpoint($x-large) {
+        font-size: 16px;
+        padding: 0 0 0 24px;
+
+      }
+
+      span {
+        font-weight: 400;
+        margin-left: 4px;
       }
     }
   }
@@ -176,7 +220,6 @@ header {
 
     .sort {
       text-transform: uppercase;
-      font-size: 12px;
       font-weight: normal;
       color: #2c2c2c;
       text-align: center;
@@ -186,6 +229,25 @@ header {
       line-height: 20px;
       cursor: pointer;
       user-select: none;
+
+      font-size: 10px;
+
+      @include breakpoint($small) {
+        font-size: 11px;
+      }
+
+      @include breakpoint($medium) {
+        font-size: 12px;
+      }
+
+      @include breakpoint($large) {
+        font-size: 13px;
+      }
+
+      @include breakpoint($x-large) {
+        font-size: 14px;
+      }
+
 
       span i {
         transition: transform 0.3s;
@@ -238,10 +300,26 @@ header {
           height: 40px;
           width: 11.1111%;
           font-family: 'proxima_novaregular', Helvetica, Arial, sans-serif;
-          font-size: 14px;
           vertical-align: middle;
           color: #3a3a3a;
           transition: color .25s;
+          font-size: 10px;
+
+          @include breakpoint($small) {
+            font-size: 11px;
+          }
+
+          @include breakpoint($medium) {
+            font-size: 12px;
+          }
+
+          @include breakpoint($large) {
+            font-size: 13px;
+          }
+
+          @include breakpoint($x-large) {
+            font-size: 14px;
+          }
         }
 
         &:hover {
@@ -251,6 +329,24 @@ header {
             color: $white-color;
           }
         }
+      }
+    }
+
+    td.lab,
+    th.lab_sort {
+      display: none;
+
+      @include breakpoint(415px) {
+        display: table-cell;
+      }
+    }
+
+    td.cut,
+    th.cut_short {
+      display: none;
+
+      @include breakpoint(388px) {
+        display: table-cell;
       }
     }
   }
@@ -265,6 +361,7 @@ header {
     overflow: hidden;
     position: absolute;
     bottom: 0;
+
     .pg_nav {
       .pagination {
         li {
@@ -299,7 +396,7 @@ header {
 
       }
 
-      .disabled{
+      .disabled {
         opacity: 0.5;
       }
 
@@ -308,6 +405,163 @@ header {
         font-size: 20px;
         line-height: 28px;
       }
+    }
+  }
+}
+
+#followSection {
+  width: 100%;
+  height: 74px;
+  margin: 20px 0;
+  opacity: 0.8;
+  transition: opacity 0.3s;
+  background: $grey-color;
+  border: 1px solid $dark-grey-color;
+
+  a {
+    height: inherit;
+    color: $primary-color;
+
+  }
+
+  h2 {
+    font-size: 15px;
+    font-weight: 400;
+
+    @include breakpoint($small) {
+      font-size: 20px;
+    }
+
+    @include breakpoint($medium) {
+      font-size: 25px;
+
+    }
+
+    @include breakpoint($large) {
+      font-size: 30px;
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 40px;
+
+    }
+  }
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.footer_wrapper {
+  padding: 15px;
+  border: 1px solid $dark-grey-color;
+
+  @include breakpoint($small) {
+    padding: 20px;
+  }
+
+  @include breakpoint($medium) {
+    padding: 30px;
+  }
+
+  @include breakpoint($large) {
+    padding: 35px;
+  }
+
+  @include breakpoint($x-large) {
+    padding: 40px;
+  }
+
+  .title {
+    font-size: 14px;
+    font-weight: 300;
+    color: $primary-color;
+    margin-bottom: 10px;
+
+    @include breakpoint($small) {
+      font-size: 16px;
+      margin-bottom: 15px;
+    }
+
+    @include breakpoint($medium) {
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+
+    @include breakpoint($large) {
+      font-size: 20px;
+      margin-bottom: 22px;
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 24px;
+      margin-bottom: 25px;
+    }
+  }
+
+  a {
+    color: #a5afb3;
+    font-size: 11px;
+    line-height: 15px;
+    font-weight: 300;
+
+    @include breakpoint($small) {
+      font-size: 13px;
+      line-height: 15px;
+    }
+
+    @include breakpoint($medium) {
+      font-size: 14px;
+      line-height: 20px;
+    }
+
+    @include breakpoint($large) {
+      font-size: 15px;
+      line-height: 25px;
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 19px;
+      line-height: 30px;
+    }
+  }
+
+  p {
+    @extend a;
+  }
+
+  .right_content {
+    position: relative;
+
+    form {
+      input {
+        border: 1px solid $dark-grey-color;
+        padding-left: 10px;
+        width: 55%;
+        @extend a;
+      }
+
+      button {
+        @extend a;
+        background-color: #a5afb3;
+        outline: none;
+        border: none;
+        color: $white-color;
+        width: 40%;
+        cursor: pointer;
+        font-weight: normal;
+      }
+    }
+
+    &:before {
+      content: '';
+      width: 1px;
+      height: 100%;
+      background-color: $dark-grey-color;
+      position: absolute;
+      left: -22%;
+      transform: translateX(22%);
+      top: 0;
     }
   }
 }
