--- a/sass/core/_breakpoints.scss
+++ b/sass/core/_breakpoints.scss
@@ -1,4 +1,4 @@
-$small: rem-calc(576);
-$medium: rem-calc(768);
-$large: rem-calc(992);
-$x-large: rem-calc(1200);
+$small: 576px;
+$medium: 768px;
+$large: 992px;
+$x-large: 1200px;
