--- a/sass/templates/_bellagio.scss
+++ b/sass/templates/_bellagio.scss
@@ -1,4 +1,5 @@
 header {
+  z-index: 10;
   .header_top {
     background: $primary-color;
     padding: 10px 0px;
@@ -139,8 +140,6 @@ header {
   position: relative;
 
   .search-title {
-    // height: 60px;
-
     h1 {
       font-weight: bold;
       margin: 0;
@@ -218,6 +217,66 @@ header {
     }
   }
 
+
+  #ds_filter {
+    display: none;
+    height: 525px;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    padding: 20px 35px;
+    background: $white-color;
+    box-shadow: 0px 5px 10px rgba(165, 175, 179, 0.326);
+    z-index: 2;
+    .ui-slider {
+      background: $dark-grey-color;
+      height: 4px;
+      border-radius: 10px;
+      .ui-slider-handle {
+        position: absolute;
+        cursor: pointer;
+        top: -7px;
+        color: #3d328e;
+        outline: 0 none;
+        border: 0 none;
+        cursor: pointer;
+        outline: none;
+
+        &:last-child {
+          transform: rotate(180deg);
+          &::after{
+            top: -8px !important;
+          }
+        }
+
+        &::after {
+          display: inline-block;
+          font-style: normal;
+          font-variant: normal;
+          text-rendering: auto;
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
+          content: "\f0da";
+          font-size: 32px;
+          position: absolute;
+          top: -7px;
+        }
+
+      }
+
+      .ui-slider-range {
+        background: $primary-color;
+      }
+
+    }
+
+
+  }
+
+
+
+
   .results_table {
     width: 100%;
     border-spacing: 0;
@@ -237,6 +296,7 @@ header {
       user-select: none;
 
       font-size: 10px;
+      z-index: 10;
 
       @include breakpoint($small) {
         font-size: 11px;
